tests/run/error_break_outside_loop.ig
// error_break_outside_loop.ig — 'break' is only legal inside a loop.
fn main() -> int {
    break
    return 0
}
